--- a/java/build.xml
+++ b/java/build.xml
@@ -17,7 +17,7 @@
   </target>
 
   <target name="compile" depends="init">
-    <javac srcdir="${src}" source="1.6" target="1.6" debug="on" includeantruntime="false">
+    <javac encoding="UTF-8" srcdir="${src}" source="1.7" target="1.7" debug="on" includeantruntime="false">
        <classpath refid="project.jars"/>
     </javac>
   </target>
@@ -57,7 +57,7 @@
              access="public"
              author="true"
              doctitle="Rubato"
-             source="1.5"
+             source="1.7"
 	     additionalparam="-charset UTF-8">
       <classpath refid="project.jars"/>
       <package name="org.rubato.*"/>
